# robocup_entrance_exam

./: Question_A.md  Question_B.md  README.md
QuestionC/: CMakeLists.txt
QuestionC/report/: Question_report.md
QuestionC/script/: tcp.py
QuestionC/src/: demo.cpp
